[package]
name = "rcon_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bincode = "2.0.0-rc.3"
rcon_utf8 = { path = "../rcon_utf8" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }
tokio-util = { version = "0.7.10", features = ["io", "io-util"] }
